添加公共文件

--- a/LearnNotes.Web/Login.html
+++ b/LearnNotes.Web/Login.html
@@ -1,13 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>登录界面</title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta name="keywords" content="学习,笔记" />
+    <meta name="description" content="学习笔记" />
+    <meta name="author" content="jiaying" />
+    <link href="Common/bootstrap3/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="Common/JS/jquery.min.js"></script>
+    <script src="Common/bootstrap3/js/bootstrap.min.js"></script>
 </head>
 <body>
     测试
-
+    <table></table>
 
 
 </body>
